# dagma

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev_tools_fix.md  docker-compose.yml  pyproject.toml  task_list.md
.github/workflows/: ci.yml  docker-build.yml
.trae/rules/: project_rules.md
docker/: Dockerfile_dagster  Dockerfile_mlflow  Dockerfile_user_code
docker/config/: dagster.yaml  workspace.yaml
docs/: task_M0.md  task_M1.md  task_M2.md  task_M3.md  task_M4.md  task_M5.md  task_M6.md  task_M7.md
mlruns/0/: meta.yaml
mlruns/0/2fae6953886c401b95149874970874fe/: meta.yaml
mlruns/0/2fae6953886c401b95149874970874fe/artifacts/: train_summary.txt
mlruns/0/2fae6953886c401b95149874970874fe/metrics/: rmse
mlruns/0/2fae6953886c401b95149874970874fe/tags/: mlflow.runName  mlflow.source.name
scripts/: deploy_podman.sh  dev_check.sh  dev_web.sh  smoke.sh  start_env.sh
src/dagma/: __init__.py  definitions.py
src/dagma/defs/: __init__.py
src/dagma/defs/core/: __init__.py  resources.py
src/dagma/defs/data/: __init__.py  assets.py  partitions.py
src/dagma/defs/llm/: __init__.py  assets.py  resources.py
src/dagma/defs/models/: __init__.py  assets.py  resources.py
src/dagma/defs/viz/: __init__.py  assets.py  resources.py
tests/: test_assets.py  test_integration_mlflow.py  test_resources.py  test_smoke.py
